@@ -1,1 +1,4 @@
-!! check doc/html/* for infos
+This changelog is never up to date. please check the homepage or the widelands
+README file.
+
+
